Version 1.6.1
    * not yet released
    * added option to disable inline completion in locationbar
    * fixed showing tooltips on tabs when tab previews are disabled
    * fixed search shortcuts longer than one character in locationbar
    * fixed building issues on OS X and OS/2
    * fixed disabling tab previews from preferences
    * fixed building new Gnome/KDE keyring passwords
    * fixed building StatusBarIcons plugin on Windows

Version 1.6.0
    * released 1 January 2014
    * added support for Proxy Auto-Config (PAC)
    * added option to open another private window from private window
    * added option to detach tabs from window
    * added delete action in edit context menu on page
    * added possibility to remove EasyList from AdBlock
    * added inline domain completion to urlbar
    * added KWallet password backend plugin
    * added Gnome-Keyring password backend plugin
    * added StatusBar Icons plugin that adds extra icons to statusbar
    * added support for POST method in search engines manager
    * added context menu for translating webpage
    * added possibility to export bookmarks to html file
    * great performance improvement for matching basic rules in AdBlock
    * themes can now be loaded from profile directories
    * pagescreen can now save output into number of formats, including PDF
    * proxy exceptions now supports wildcards (*, ?)
    * cancel upload when trying to upload non-readable files
    * select previous / next engines with ctrl+up/down in websearchbar
    * ask user first before closing all but the current tab from tabbar
    * last 2 sessions are now backuped in profile directory
    * always show tab previews after a small delay
    * GreaseMonkey: added icon in statusbar
    * GreaseMonkey: added support for GM_Settings
    * GreaseMonkey: fixed userscripts when first loading plugin
    * GreaseMonkey: run userscripts in all frames on page
    * oxygen: set rounded corners for tooltips