@@ -57,6 +57,7 @@ void QzSettings::loadSettings()
     settings.beginGroup("Browser-Tabs-Settings");
     newTabPosition = settings.value("OpenNewTabsSelected", false).toBool() ? Qz::NT_SelectedTab : Qz::NT_NotSelectedTab;
     tabsOnTop = settings.value("TabsOnTop", false).toBool();
+    alwaysSwitchTabsWithWheel = settings.value("AlwaysSwitchTabsWithWheel", false).toBool();
     settings.endGroup();
 }
 
